fix(kit): scrollbar in multi-select with data-list-wrapper

--- a/projects/kit/components/multi-select/multi-select.style.less
+++ b/projects/kit/components/multi-select/multi-select.style.less
@@ -28,6 +28,7 @@
     align-items: center;
     pointer-events: none;
     box-sizing: border-box;
+    margin: 0.0625rem 0;
 }
 
 .t-primitive {
